# Daily_FX_Rates

./: .gitignore  README.md  database.py  main.py  observation.py  pyproject.toml  series.py  sql.py
