[project]
name = "daily-fx-rates"
version = "0.1.0"
description = "Download daily FX rates from Riksbank and store into SQLite"
authors = [
    {name = "Maxym Matskiv",email = "maksymvolodymyr.matskiv@lnu.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.10.8,<3.11"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

